objects/OF_CQS_Evento__c.object
<CustomObject>
    <fields>
        <fullName>CQS_EV_N_B_DAN2__c</fullName>
        <defaultValue>&quot;Prima di caricare gli allegati è necessario procedere al salvataggio. Allegare: 1) Liberatoria del soggetto danneggiato; 2) Documentazione fotografica&quot;</defaultValue>
        <label>N.B.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_EV_POP__c</fullName>
        <label>POP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_EV_Progetto_WF_EA__c</fullName>
        <formula>CQS_Ev_Progetto__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progetto WF EA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_Ev_Indagini_Preventive_Sottosuolo__c</fullName>
        <inlineHelpText>Sono state eseguite le indagini preventive del sottosuolo</inlineHelpText>
        <label>Indagini Preventive del Sottosuolo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Ev_Lettera_D_Ordine__c</fullName>
        <label>Lettera D&apos;Ordine</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_Ev_Note_CM_per_Lavorazione__c</fullName>
        <label>Note CM per Lavorazione</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CQS_Ev_Planimetrie_Ente_Gestore_Conformi__c</fullName>
        <inlineHelpText>Le planimetrie dell&apos;ente gestore sono conformi a quanto riscontrato</inlineHelpText>
        <label>Planimetrie Ente Gestore Conformi</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Ev_Planimetrie_Georadar_Conformi__c</fullName>
        <inlineHelpText>le planimetrie georadar sono conformi a quanto riscontrato</inlineHelpText>
        <label>Planimetrie Georadar Conformi</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Ev_Prejob_check_eseguito__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Il prejob check è stato eseguito</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CQS_Ev_Profondita__c</fullName>
        <description>solo per interferenza a sottoservizi.</description>
        <label>Profondità (cm)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_Ev_Progetto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Progetto</label>
        <referenceTo>CQS_Progetto__c</referenceTo>
        <relationshipLabel>Eventi</relationshipLabel>
        <relationshipName>Eventi</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CQS_Ev_Skip_Controller__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Questo campo serve per evitare alcune specifiche azioni iniziali del controller.
Use this field to skip particular controller action</description>
        <label>Skip_Controller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CQS_Index_Frequenza_Tagli_Danneggiamenti__c</fullName>
        <formula>( VALUE(OF_CQS_ID_Danneggiamento__c) + VALUE(ID_Taglio__c) )/ (OF_CQS_Ore_Lavorate_IE__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indice Frequenza Tagli o Danneggiamenti</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CQS_Indice_Gravita_Taglio_Danneggiamento__c</fullName>
        <inlineHelpText>Fare riferimento alla tabella fornita da OF</inlineHelpText>
        <label>Indice Gravità</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>L - Lieve</fullName>
                    <color>#F3D904</color>
                    <label>L - Lieve</label>
                </value>
                <value>
                    <fullName>M - Media</fullName>
                    <color>#FF9900</color>
                    <label>M - Media</label>
                </value>
                <value>
                    <fullName>A - Alta</fullName>
                    <color>#FF0000</color>
                    <label>A - Alta</label>
                </value>
                <value>
                    <fullName>NP - Non Pervenuto</fullName>
                    <color>#999999</color>
                    <label>NP - Non Pervenuto</label>
                </value>
                <value>
                    <fullName>Media</fullName>
                    <isActive>false</isActive>
                    <label>Media</label>
                </value>
                <value>
                    <fullName>N.P.</fullName>
                    <isActive>false</isActive>
                    <label>N.P.</label>
                </value>
                <value>
                    <fullName>NP</fullName>
                    <isActive>false</isActive>
                    <label>NP</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Luogo_Identificativo_dell_even__c</fullName>
        <label>Luogo Identificativo dell&apos;evento</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>CQS_Note_Interf_Approfondimento_cause__c</fullName>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_PLE_AREA_CENTRO__c</fullName>
        <label>ComunePL</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LATINA</fullName>
                </value>
                <value>
                    <fullName>PESCARA</fullName>
                </value>
                <value>
                    <fullName>PERUGIA</fullName>
                </value>
                <value>
                    <fullName>TERNI</fullName>
                </value>
                <value>
                    <fullName>ANCONA</fullName>
                </value>
                <value>
                    <fullName>CAGLIARI</fullName>
                </value>
                <value>
                    <fullName>SASSARI</fullName>
                </value>
                <value>
                    <fullName>FIRENZE</fullName>
                </value>
                <value>
                    <fullName>AREZZO</fullName>
                </value>
                <value>
                    <fullName>GROSSETO</fullName>
                </value>
                <value>
                    <fullName>LIVORNO</fullName>
                </value>
                <value>
                    <fullName>LUCCA</fullName>
                </value>
                <value>
                    <fullName>PISA</fullName>
                </value>
                <value>
                    <fullName>PRATO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_PLE_AREA_NORD__c</fullName>
        <label>ComunePLN</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CESENA</fullName>
                </value>
                <value>
                    <fullName>FERRARA</fullName>
                </value>
                <value>
                    <fullName>FORLI</fullName>
                </value>
                <value>
                    <fullName>PIACENZA</fullName>
                </value>
                <value>
                    <fullName>RAVENNA</fullName>
                </value>
                <value>
                    <fullName>REGGIO EMILIA</fullName>
                </value>
                <value>
                    <fullName>RIMINI</fullName>
                </value>
                <value>
                    <fullName>VENEZIA</fullName>
                </value>
                <value>
                    <fullName>PADOVA</fullName>
                </value>
                <value>
                    <fullName>TREVISO</fullName>
                </value>
                <value>
                    <fullName>UDINE</fullName>
                </value>
                <value>
                    <fullName>LA SPEZIA</fullName>
                </value>
                <value>
                    <fullName>ALESSANDRIA</fullName>
                </value>
                <value>
                    <fullName>NOVARA</fullName>
                </value>
                <value>
                    <fullName>BERGAMO</fullName>
                </value>
                <value>
                    <fullName>COMO</fullName>
                </value>
                <value>
                    <fullName>BUSTO-ARSIZIO</fullName>
                </value>
                <value>
                    <fullName>MONZA</fullName>
                </value>
                <value>
                    <fullName>PAVIA</fullName>
                </value>
                <value>
                    <fullName>VARESE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_PLE_AREA_SUD__c</fullName>
        <label>ComunePLS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PALERMO</fullName>
                </value>
                <value>
                    <fullName>CATANIA</fullName>
                </value>
                <value>
                    <fullName>MESSINA</fullName>
                </value>
                <value>
                    <fullName>SIRACUSA</fullName>
                </value>
                <value>
                    <fullName>REGGIO CALABRIA</fullName>
                </value>
                <value>
                    <fullName>BARI</fullName>
                </value>
                <value>
                    <fullName>FOGGIA</fullName>
                </value>
                <value>
                    <fullName>LECCE</fullName>
                </value>
                <value>
                    <fullName>TARANTO</fullName>
                </value>
                <value>
                    <fullName>MATERA</fullName>
                </value>
                <value>
                    <fullName>NAPOLI</fullName>
                </value>
                <value>
                    <fullName>SALERNO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_Punteggio_Tot_Gravit_Sottoservizio__c</fullName>
        <formula>OF_CQS_Punteggio_Gravit_SS__c  *  OF_CQS_Punteggio_Sottoservizio__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Punteggio Totale Gravità Sottoservizio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CQS_ev_Tipo_Allegato__c</fullName>
        <label>Tipo Allegato</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Documento Pre Ripristino</fullName>
                </value>
                <value>
                    <fullName>Documento Post Ripristino</fullName>
                </value>
                <value>
                    <fullName>Verbale Rilascio Ente Gestore</fullName>
                </value>
                <value>
                    <fullName>Altro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Chiusura_Evento__c</fullName>
        <label>Data Chiusura Evento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EOF_CQS_Proprietario__c</fullName>
        <label>Proprietario</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Infortunio__c</fullName>
        <displayFormat>I - {00000}</displayFormat>
        <label>ID Infortunio</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ID_Taglio__c</fullName>
        <displayFormat>T-{0000}</displayFormat>
        <label>ID Taglio</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Numero_Protocollo_Assicurazione__c</fullName>
        <label>Numero Protocollo Assicurazione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_Protocollo__c</fullName>
        <label>Numero Protocollo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Allegato_Obbligatorio_DAN__c</fullName>
        <defaultValue>&quot;Prima di caricare gli allegati è necessario procedere al salvataggio. Allegare: 1) Liberatoria del soggetto danneggiato; 2) Documentazione fotografica&quot;</defaultValue>
        <label>N.B.</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Allegato_Obbligatorio_Infortunio__c</fullName>
        <defaultValue>&quot;Prima di caricare gli allegati è necessario procedere al salvataggio. Allegare: 1) Denuncia all’INAIL 2) Referto dell&apos;Ospedale 3) Certificato di avvenuto rientro 4)Eventuali referti per giorni di prognosi aggiuntiva&quot;</defaultValue>
        <label>N.B.</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Allegato_Obbligatorio_Interf_SS__c</fullName>
        <defaultValue>&quot;Prima di caricare gli allegati è necessario procedere al salvataggio. Si allega: 1) Documentazione fotografica pre e post evento. 2) Verbale rilasciato dall’ente gestore; 3) Eventuale liberatoria riparazione impresa.&quot;</defaultValue>
        <label>N.B.</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Anzianita__c</fullName>
        <label>Anzianità</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Area_Cavo__c</fullName>
        <label>Area Cavo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Bad_Practice_Field__c</fullName>
        <label>Bad Practice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Bad_Practice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bad Practice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_CQS_CAP__c</fullName>
        <inlineHelpText>Inserire valori numerici</inlineHelpText>
        <label>Cap</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Cantiere__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cantiere</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Cantieri</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Cantieri</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Codice_Danneggiamento_Correlato__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Codice Danneggiamento Correlato</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Danneggiamento</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>OF_CQS_Evento__c</referenceTo>
        <relationshipLabel>Eventi (Codice Danneggiamento Correlato)</relationshipLabel>
        <relationshipName>Danneggiamenti_Infortuni</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Codice_Inail__c</fullName>
        <label>Codice Inail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Codice_Infortunio_Correlato__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Codice Infortunio Correlato</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Infortunio</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>OF_CQS_Evento__c</referenceTo>
        <relationshipLabel>Codici Infortuni Correlati</relationshipLabel>
        <relationshipName>Infortuni_Danneggiamenti</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Codice_Permesso_IE__c</fullName>
        <label>Codice Permesso</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Codice_Permesso__c</fullName>
        <label>Codice Permesso</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Codice_Pratica__c</fullName>
        <label>Codice Pratica</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Codice_RIchiesta_Posa__c</fullName>
        <label>Codice Richiesta Posa</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Comune_Text__c</fullName>
        <description>ATTENZIONE: INSERIRE PER INTERO IL NOME DEL COMUNE SCRIVENDO TUTTI I CARATTERI IN MAIUSCOLO.</description>
        <label>Comune</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Comune__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ComuneL</label>
        <referenceTo>OF_AreaGeograficaCustom__c</referenceTo>
        <relationshipLabel>Eventi (Comune)</relationshipLabel>
        <relationshipName>Comune</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Danneggiamento__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Danneggiamento</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Data_Apertura_Pratica__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Data Apertura Pratica</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Data_Att_Assicurazione_Impresa__c</fullName>
        <label>Data Attivazione Assicurazione Impresa</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Data_Chiusura_Pratica__c</fullName>
        <description>In caso di infortunio è la data di rientro a lavoro dell&apos;infortunato</description>
        <inlineHelpText>data rientro infortunato, data riparazione interferenza, o data riparazione danneggiamento a terzi</inlineHelpText>
        <label>Data Chiusura Pratica</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Data_Evento__c</fullName>
        <label>Data Evento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Data_Primo_Conteggio__c</fullName>
        <label>Data Primo Conteggio</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Decesso__c</fullName>
        <defaultValue>false</defaultValue>
        <description>check box per indicare l’avvenuto “Decesso” di una risorsa durante le attività, su questa checkbox si fa un controllo che non permette l’inserimento di giorni di prognosi.</description>
        <label>Decesso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Diffida__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diffida</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Ente__c</fullName>
        <label>Ente</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Eta__c</fullName>
        <label>Età</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Evento_Correlato__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Codice Evento Correlato</label>
        <referenceTo>OF_CQS_Evento__c</referenceTo>
        <relationshipLabel>Eventi</relationshipLabel>
        <relationshipName>EventiCorrelati</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_CQS_GIORNI_PERSI_INFORTUNIO2__c</fullName>
        <label>Giorni Persi22</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Giorni_Persi__c</fullName>
        <formula>IF(AND(OF_CQS_Decesso__c = false,OF_CQS_Prognosi_Riservata__c = true,OF_CQS_Giorni_Prognosi_Add_Inseriti__c =true), ((OF_CQS_Data_Primo_Conteggio__c -  OF_CQS_Data_Evento__c ) +  OF_CQS_Prognosi_aggiuntiva__c), (VALUE(Prognosi__c )  +  OF_CQS_Prognosi_aggiuntiva__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Giorni Persi_leva</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Giorni_Persi_e__c</fullName>
        <formula>IF(OF_CQS_Decesso__c = TRUE, 0,
IF(!ISBLANK(Data_Chiusura_Evento__c),
(Data_Chiusura_Evento__c -  OF_CQS_Data_Evento__c),
IF(AND(OF_CQS_Prognosi_Riservata__c = true,OF_CQS_Giorni_Prognosi_Add_Inseriti__c =false),
(TODAY() - OF_CQS_Data_Evento__c ), 
IF(AND(OF_CQS_Prognosi_Riservata__c = true,OF_CQS_Giorni_Prognosi_Add_Inseriti__c =true), 
((OF_CQS_Data_Primo_Conteggio__c - OF_CQS_Data_Evento__c ) + OF_CQS_Prognosi_aggiuntiva__c), 
IF(AND(!ISBLANK(VALUE(Prognosi__c )),!ISBLANK(OF_CQS_Prognosi_aggiuntiva__c)),(VALUE(Prognosi__c ) + OF_CQS_Prognosi_aggiuntiva__c),(TODAY() - OF_CQS_Data_Evento__c ))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Giorni Persi</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Giorni_Prognosi_Add_Inseriti__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Questo campo serve solo per un workflow. Non deve essere inserito nel Page Layout.</description>
        <label>Giorni Prognosi Aggiuntiva Inseriti</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Guasto__c</fullName>
        <label>Guasto</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_ID_Danneggiamento__c</fullName>
        <displayFormat>D - {0000}</displayFormat>
        <label>ID Danneggiamento</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Impresa_Esecutrice_Eventi__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Selezionare Impresa esecutrice utilizzando il comando di ricerca</inlineHelpText>
        <label>Impresa Esecutrice</label>
        <referenceTo>OF_CQS_Anagrafica__c</referenceTo>
        <relationshipLabel>Eventi Impresa Esecutrice</relationshipLabel>
        <relationshipName>Eventi_Impresa_Esecutrice</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Impresa_Mandataria__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Selezionare Impresa affidataria utilizzando il comando di ricerca.</inlineHelpText>
        <label>Impresa Affidataria</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 1)</booleanFilter>
            <filterItems>
                <field>OF_CQS_Anagrafica__c.CQS_Check_Affidataria__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>OF_CQS_Anagrafica__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Imprese in raggruppamento</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OF_CQS_Anagrafica__c</referenceTo>
        <relationshipLabel>Eventi Impresa Mandataria</relationshipLabel>
        <relationshipName>Eventi_Impresa_Mandataria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Inadempienze_Operative__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inadempienze Operative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Indagini__c</fullName>
        <label>Indagini</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>NP</fullName>
                    <label>NP - non pervenuto</label>
                </value>
                <value>
                    <fullName>NON SEGNALATO</fullName>
                    <label>Non rilevato da Geo-radar</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OF_CQS_Indice_Frequenza_Infortuni__c</fullName>
        <formula>( VALUE(ID_Infortunio__c) / OF_CQS_Ore_Lavorate_IE__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Questo campo mostra il rapporto tra il numero di infortuni e le ore lavorate</inlineHelpText>
        <label>Indice Frequenza Infortuni</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Indice_Gravita_Infortunio__c</fullName>
        <label>Indice Gravità Infortunio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mortale</fullName>
                    <color>#FF0000</color>
                    <label>Mortale</label>
                </value>
                <value>
                    <fullName>&gt; 30gg di prognosi</fullName>
                    <color>#FF9900</color>
                    <label>&gt; 30gg di prognosi</label>
                </value>
                <value>
                    <fullName>&lt; 30gg di prognosi</fullName>
                    <color>#F3D904</color>
                    <label>&lt; 30gg di prognosi</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OF_CQS_Infortunio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Infortunio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Km_Scavo_IE__c</fullName>
        <label>Km Scavo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Km_Scavo__c</fullName>
        <inlineHelpText>km di scavo realizzati sulla Città</inlineHelpText>
        <label>Km Scavo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Mansione__c</fullName>
        <label>Mansione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_N_B_Ev__c</fullName>
        <defaultValue>&apos;Prima di caricare gli allegati è necessario procedere al salvataggio.&apos;</defaultValue>
        <label>N.B.</label>
        <length>110</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Nominativo_Infortunio__c</fullName>
        <label>Nominativo Infortunio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Note_Merito_Comportamento_Impresa__c</fullName>
        <label>Note Merito Comportamento Impresa</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Note_Sinistro__c</fullName>
        <label>Note Sinistro</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Note__c</fullName>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Numero_Civico__c</fullName>
        <label>Numero Civico</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Oggetto__c</fullName>
        <label>Oggetto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Ore_Lavorate_IE__c</fullName>
        <label>Ore Lavorate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Ore_Lavorate__c</fullName>
        <inlineHelpText>Ore lavorate sulla Città</inlineHelpText>
        <label>Ore Lavorate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Prognosi_Riservata__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prognosi Riservata</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Prognosi_aggiuntiva__c</fullName>
        <label>Giorni Prognosi Aggiuntivi</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Provincia_Evento__c</fullName>
        <description>ATTENZIONE: INSERIRE LA SIGLA CORRETTA DELLA PROVINCIA SCRIVENDO TUTTI I CARATTERI IN MAIUSCOLO</description>
        <label>Provincia</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Provincia__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provincia</label>
        <referenceTo>OF_AreaGeograficaCustom__c</referenceTo>
        <relationshipName>Eventi</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Punteggio_Gravit_SS__c</fullName>
        <label>Punteggio Gravità SS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Punteggio_Sottoservizio__c</fullName>
        <label>Punteggio Sottoservizio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Rapporto_Contrattuale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rapporto Contrattuale</label>
        <referenceTo>CQS_Collaborazioni__c</referenceTo>
        <relationshipLabel>Eventi</relationshipLabel>
        <relationshipName>Eventi_Collaborazioni</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Rete_Superficiale__c</fullName>
        <label>Rete Superficiale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>NP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OF_CQS_Richiesta_Danni__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Richiesta Danni</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Ricovero__c</fullName>
        <label>Ricovero</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>NP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OF_CQS_Riparazione_Danno__c</fullName>
        <label>Riparazione Danno</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Eseguita Impresa</fullName>
                </value>
                <value>
                    <fullName>Eseguita Ente</fullName>
                </value>
                <value>
                    <fullName>Non Eseguita</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>